tests/outref/TOB08.ref

-- TOB09 : OCTO343 : ORDER BY expression

select * from names order by 1+1;
select * from names order by 1*1;
select * from names order by 1+id;
select * from names order by id+1;
select id,firstname,lastname from names order by id+id;
select * from names order by id%2;
select * from names order by -id;
-- ORDER BY using multiple columns with expressions
select * from names n1 left join names n2 on n1.firstname < n2.firstname order by -n1.id,n2.id%2;
-- ORDER BY plain alias names are allowed
select 1+id*2 as a from (select id from names) order by a;
-- BUT ORDER BY expressions involving alias names are not allowed (and parse errors are issued)
select 1+id*2 as a from (select id from names) order by -a;
select 1+id*2 as a from (select id from names) order by 1+a;
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
0|Zero|Cool
2|Cereal|Killer
4|Joey|
1|Acid|Burn
3|Lord|Nikon
5|Zero|Cool
5|Zero|Cool
4|Joey|
3|Lord|Nikon
2|Cereal|Killer
1|Acid|Burn
0|Zero|Cool
5|Zero|Cool|||
4|Joey||0|Zero|Cool
4|Joey||3|Lord|Nikon
4|Joey||5|Zero|Cool
3|Lord|Nikon|0|Zero|Cool
3|Lord|Nikon|5|Zero|Cool
2|Cereal|Killer|0|Zero|Cool
2|Cereal|Killer|4|Joey|
2|Cereal|Killer|3|Lord|Nikon
2|Cereal|Killer|5|Zero|Cool
1|Acid|Burn|0|Zero|Cool
1|Acid|Burn|2|Cereal|Killer
1|Acid|Burn|4|Joey|
1|Acid|Burn|3|Lord|Nikon
1|Acid|Burn|5|Zero|Cool
0|Zero|Cool|||
1
3
5
7
9
11
[ERROR] PATH:LINENUM DATE TIME : Unknown column: A

-- BUT ORDER BY expressions involving alias names are not allowed (and parse errors are issued)
select 1+id*2 as a from (select id from names) order by -a;
                                                         ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: -- BUT ORDER BY expressions involving alias names are not allowed (and parse errors are issued)
select 1+id*2 as a from (select id from names) order by -a;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: A

select 1+id*2 as a from (select id from names) order by 1+a;
                                                          ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select 1+id*2 as a from (select id from names) order by 1+a;


